[package]
name = "fe"
version = "0.1.16"
authors = ["RustemB <bakirov.com@yandex.ru>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/RustemB/fe"
repository = "https://github.com/RustemB/fe"
license = "GPL-3.0"

[dependencies]
serde = "1.0.114"
serde_json = "1.0.57"
serde_yaml = "0.8.13"
ron = "0.6.0"
toml = "0.5.6"
clap = "2.33.2"
bat = "0.15.4"
directories = "3.0.1"
