[package]
name = "fe"
version = "0.1.17"
authors = ["RustemB <bakirov.com@yandex.ru>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/RustemB/fe"
repository = "https://github.com/RustemB/fe"
license = "GPL-3.0"

[dependencies]
bat = "0.18.0"
clap = "2.33.3"
directories = "3.0.1"
ron = "0.6.4"
serde = "1.0.124"
serde_json = "1.0.64"
serde_yaml = "0.8.17"
toml = "0.5.8"
